# ethexco

./: .pre-commit-config.yaml  README.md  pyproject.toml
ethexco/: frame.py  util.py
run/: check_frames.py  chunk_raw_data.py  chunking.py  frames_add_text.py  generate_dataset.py  generate_frames.py  train.py  train_modal.py
run/testing/: test_chunking.py  test_datasets.py  test_frames.py  test_modal.py
