[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Alexander Belikov <alexander@growgraph.dev>"]
description = "Agentic Ethics Council"
name = "ethexco"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
llama-index = "^0.12.16"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
