[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "jupyterlab>=4.3.5,<5",
  "pre-commit>=4.1.0,<5"
]

[project]
authors = [{email = "alexander@growgraph.dev", name = "Alexander Belikov"}]
dependencies = [
  "datasets>=3.3.2,<4",
  "langchain-core>=0.3.40,<0.4",
  "langchain-openai>=0.3.7,<0.4",
  "llama-index-readers-json>=0.3.0,<0.4",
  "llama-index>=0.12.19,<0.13",
  "matplotlib>=3.10.1,<4",
  "modal>=0.74.29",
  "pydotplus>=2.0.2,<3",
  "rdflib>=7.1.3,<8",
  "suthing>=0.3.0,<0.4",
  "unsloth>=2025.2.15,<2026"
]
description = "Agentic Ethics Council"
name = "ethexco"
readme = "README.md"
requires-python = "~=3.11"
version = "0.2.0"

[tool.hatch.build.targets.sdist]
include = ["ethexco"]

[tool.hatch.build.targets.wheel]
include = ["ethexco"]
